# curtrail

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
examples/sample-cli/: README.md  curtrail.toml  s3_last_data_access.py
examples/sample-cli-ica/: README.md  curtrail.toml  ica_compute_by_project.py  ica_helper.py  pyproject.toml
examples/sample-cli-logs/: README.md  pyproject.toml  s3_last_data_access.py
legacy/: fetch_cloudtrail_data.py  polars-conversions.py
src/: analysis_context.py  analysis_source_billing.py  analysis_source_log.py  app_context.py  commands_bill.py  commands_log.py  context.py  cur.py  curtrail.py
src/bill/: bill_data.py  bill_data_data_transfer.py  bill_data_storage.py
src/cloudtrail_normalise/: process_day.py
src/common/: assertion_guards.py  aws_cloudtrail_schema.py  aws_cur_schema.py  aws_region_shortnames.py  date_ranging.py  fetch_cur_data.py
src/common/augment/: account_names.py  currency.py  geo.py
src/common/billing/: billing_data.py  billing_data_data_transfer.py  billing_data_storage.py
src/curtrail/: __init__.py  base_config.py  cli.py  cli_context_obj.py  source_bill.py  source_bill_cur.py  source_bill_cur_test_data.py  source_bill_ica.py  source_filter.py  source_log.py  source_log_cloudtrail.py  source_log_cloudtrail_test_data.py
src/curtrail/bill/: bill_data.py  bill_data_aws.py  bill_data_aws_data_transfer.py  bill_data_aws_storage.py  bill_data_data_transfer.py  bill_data_ica.py  bill_data_ica_compute.py  bill_data_ica_storage.py  bill_data_storage.py
src/curtrail/common/: assertion_guards.py  aws_config_profiles.py  date_ranging.py
src/curtrail/common/augment/: account_names.py  geo.py  identity.py
src/curtrail/common/schema/: aws_cloudtrail_schema.py  aws_cur_schema.py  ica_schema.py
src/curtrail/log/: log_data.py  log_data_api_calls.py  log_data_api_calls_errors.py  log_data_console.py  log_data_service_event.py  log_data_vpce_event.py
src/log/: log_data.py  log_data_api_calls.py  log_data_console.py  log_data_service_event.py  log_data_vpce_event.py
test-data/cur/: README.md
test-data/cur/data/BILLING_PERIOD=2026-03/: test-data.jsonl
test-data/ica/BILLING_PERIOD=2026-03/: ica-detailed-usage-2026-03-fake.csv
tests/: adhoc.py  conftest.py  test_bill_data.py  test_bill_data_aws.py  test_bill_data_ica.py  test_log_data.py
(+21 files in other folders)
