[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "curtrail"
version = "0.1.0"
description = "A Python base library for analysing the centre's CUR data and CloudTrail logs"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "polars",
    "numpy",
    "pyarrow",
    "geoip2",
    "boto3",
    "boto3-stubs",
    "fsspec",
    "s3fs",
    "dateparser",
    "orjson",
    "boto3",
    "click",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/curtrail"]
