[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sample-cli-ica"
version = "0.1.0"
description = "An example standalone CLI project that uses curtrail as a library for ICA bills"
requires-python = ">=3.14"
dependencies = [
    "curtrail",
    "click",
]

[tool.hatch.build.targets.wheel]
packages = ["src/sample_cli_ica"]

# references the curtrail package locally - normally this
# would be to a reference in github or pypi eventually
[tool.uv.sources]
curtrail = { path = "../..", editable = true }
